adding google cloud screen

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -12,6 +12,11 @@
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxShow.gt-sm="true"
        fxShow="false">
     <ul *ngIf="!loggedInUser" fxLayout fxLayoutGap="10px" class="navigation-list-items">
+      <li><a routerLink="/google" mat-button
+             routerLinkActive="mat-accent">Test Google Cloud</a>
+      </li>
+    </ul>
+    <ul *ngIf="!loggedInUser" fxLayout fxLayoutGap="10px" class="navigation-list-items">
       <li><a routerLink="/login" mat-button
              routerLinkActive="mat-accent">Login</a>
       </li>
