--- a/src/app/google/components/google-functions/google-functions.component.html
+++ b/src/app/google/components/google-functions/google-functions.component.html
@@ -1,3 +1,35 @@
-<p>
-  google-functions works!
-</p>
+<mat-card>
+  <mat-card-header
+    fxLayout="column"
+    fxLayoutAlign="center center"
+    fxLayoutGap="10px">
+    <h3>{{headerMessage}}</h3>
+  </mat-card-header>
+  <mat-card-content>
+    <form (submit)="onTestUrl()"
+          fxLayout="column"
+          fxLayoutAlign="center center"
+          fxLayoutGap="10px"
+          #urlForm="ngForm">
+      <mat-form-field>
+        <input matInput
+               name="firstName"
+               type="text"
+               [(ngModel)]="url"
+               #urlInput="ngModel"
+               required
+               placeholder="Google Function Url">
+        <mat-error *ngIf="urlInput.invalid">Url Required</mat-error>
+      </mat-form-field>
+
+      <mat-action-row>
+        <button mat-raised-button
+                [disabled]="urlForm.invalid"
+                color="accent" type="submit">Test Url
+        </button>
+
+      </mat-action-row>
+
+    </form>
+  </mat-card-content>
+</mat-card>
