--- a/src/app/google/components/google-main/google-main.component.html
+++ b/src/app/google/components/google-main/google-main.component.html
@@ -1,3 +1,8 @@
-<p>
-  google-main works!
-</p>
+<mat-tab-group [(selectedIndex)]="selectedTabIndex">
+<mat-tab label="Google Functions">
+  <app-google-functions (callFunctionsApi)="onCallFunctionsApi($event)"></app-google-functions>
+</mat-tab>
+<mat-tab label="Google App Engine">
+  <app-google-app-engine ></app-google-app-engine>
+</mat-tab>
+</mat-tab-group>
