--- a/src/app/google/components/google-functions/google-functions.component.css
+++ b/src/app/google/components/google-functions/google-functions.component.css
@@ -7,6 +7,7 @@ mat-form-field{
 
 mat-card{
   width: 90%;
+  height: 70%;
   alignment: center;
   margin: 2%;
 }
@@ -16,5 +17,5 @@ button{
 }
 
 .text-area{
-  height: 400px;
+  height: 250px;
 }
